modules/vault-external-plugins/security-group.tf
resource "aws_security_group" "vault" {
  name        = "vault-server-sg-${var.id}"
  region = var.region
  description = "SG for Vault SSH and Vault traffic"
  depends_on = [ aws_vpc.vault-server-vpc ]
  vpc_id      = aws_vpc.vault-server-vpc.id

  tags = {
    Name = "vault server security group ${var.id}"
  }

  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8200
    to_port     = 8200
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8201
    to_port     = 8201
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
